# beamFitter

./: .gitignore  pyproject.toml  testscript.py
ExampleImages/: image_0.tif  image_1.tif
ExampleImages/210 mA/: file1.py
GUIdesign/: GUItryout.py  mainwindow.ui  untitled.pro  untitled.pro.user.7b96bbe
OldVersions/: file1.py  file1VersionMarch4Mac.py  fitterroutines.py  imageUSB.py
OldVersions/GUIdesign_OLD/: GUItryout.py  mainwindow.py  mainwindow.ui  untitled.pro.user.0ebc6ef
beam_fitter/beam_fitter_cli/: fitterroutines.py  image.py  imageUSB.py  mathmodels.py  old_fitterroutines.py  testscript.py
program/: GUItryout.py  mainwindow.py  mpl_custom_widget.py  mplwidget.py  test.py  testsave.py  use_fitter.ipynb
program/src/: fitterroutines.py  mathmodels.py
sample_images/: README.md
src/beam_fitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/beam_fitter/beam_fitter_cli/: fitterroutines.py
tests/: test_beamfitter.py
tests/test_beamfitter_cli/: test_image.py  test_mathmodels.py
